--- a/.github/workflows/discussion_notification.yml
+++ b/.github/workflows/discussion_notification.yml
@@ -12,6 +12,11 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      
+    - name: Setup Python 3.11
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.11
 
     - name: Install apyb-bot package
       run: pip install git+https://github.com/apyb/apyb-bot.git
