--- a/.github/workflows/discussion_notification.yml
+++ b/.github/workflows/discussion_notification.yml
@@ -26,4 +26,4 @@ jobs:
         APYB_BOT_GITHUB_TOKEN: ${{ secrets.APYB_BOT_GITHUB_TOKEN }}
         APYB_BOT_NO_REPLY_PASSWORD: ${{ secrets.APYB_BOT_NO_REPLY_PASSWORD }}
         APYB_BOT_SEND_TO: ${{ secrets.APYB_BOT_SEND_TO }}
-      run: apyb-bot github:new-discussion-notification --id ${{ github.event.discussion.id }}
+      run: apyb-bot github:new-discussion-notification --id ${{ github.event.discussion.number }}
