--- a/.github/workflows/discussion_notification.yml
+++ b/.github/workflows/discussion_notification.yml
@@ -1,31 +1,26 @@
-name: Discussion Notification
-
+name: Notifica Lista de E-mail da Associação
 on:
-  workflow_dispatch:
   discussion:
     types: [created]
 
 jobs:
   notify_associates:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      
-    - name: Setup Python 3.11
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.11
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Setup Python 3.11
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
+      - name: Instala apyb-bot
+        run: pip install git+https://github.com/apyb/apyb-bot.git
 
-    - name: Install apyb-bot package
-      run: pip install git+https://github.com/apyb/apyb-bot.git
-
-    - name: Notify associates
-      env:
-        APYB_BOT_GITHUB_TOKEN: ${{ secrets.APYB_BOT_GITHUB_TOKEN }}
-        APYB_BOT_NO_REPLY_PASSWORD: ${{ secrets.APYB_BOT_NO_REPLY_PASSWORD }}
-        APYB_BOT_SEND_TO: ${{ secrets.APYB_BOT_SEND_TO }}
-        APYB_GITHUB_ORG: rougeth
-        APYB_GITHUB_COMMUNITY_REPO: actions-lab
-      run: apyb-bot github:new-discussion-notification --id ${{ github.event.discussion.number }}
+      - name: Notifica lista de e-mail da APyB
+        env:
+          APYB_BOT_GITHUB_TOKEN: ${{ secrets.APYB_BOT_GITHUB_TOKEN }}
+          APYB_BOT_NO_REPLY_PASSWORD: ${{ secrets.APYB_BOT_NO_REPLY_PASSWORD }}
+          APYB_BOT_SEND_TO: ${{ secrets.APYB_BOT_SEND_TO }}
+          APYB_GITHUB_ORG: rougeth
+          APYB_GITHUB_COMMUNITY_REPO: actions-lab
+        run: apyb-bot github:new-discussion-notification --id ${{ github.event.discussion.number }}
